codex-rs/tui/src/app/snapshots/codex_tui__app__daemon_menu__tests__daemon_menu.snap
---
source: tui/src/app/daemon_menu_tests.rs
assertion_line: 104
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Daemon
  Running daemon: v0.153.0


› 1. Install latest public stable
  2. Use this CLI build

  enter select · esc back
