codex-rs/tui/src/app/snapshots/codex_tui__app__daemon_menu__tests__daemon_unpackaged_cli.snap
---
source: tui/src/app/daemon_menu_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Daemon
  Not connected to the local background server.


› 1. Install latest public stable
     Use this CLI build (disabled)  This CLI has no local package to copy

  enter select · esc back
